FIX: フルスクリーン時のz-indexを修正

--- a/components/PMWatch/styleModules/bigView.styl
+++ b/components/PMWatch/styleModules/bigView.styl
@@ -14,6 +14,7 @@
         place-content: center;
         grid-template-columns: 1fr var(--right-width);
         gap: 0;
+        z-index: 105;
     }
     &[watch-type="shinjuku"] .watch-container-grid {
         grid-template-areas: "spl spl" "spl spl" !important;
